--- a/css/index.css
+++ b/css/index.css
@@ -257,10 +257,65 @@ a {
   right: 5%;
 }
 .copyright-descktop {
-    position: absolute;
-    top: 207%;
-left: 50%;
-margin-bottom: 10px;
+  position: absolute;
+  top: 207%;
+  left: 50%;
+  margin-bottom: 10px;
+}
+.container-about {
+  width: 100%;
+  min-height: 100vh;
+  background-color: turquoise;
+  display: grid;
+  justify-items: center;
+}
+.about-content {
+  width: 80%;
+  display: grid;
+  justify-items: center;
+}
+.about-content h1 {
+  font-size: 60px;
+  text-align: center;
+}
+.about-content p {
+  text-align: justify;
+}
+.logo-about {
+  max-width: 90%;
+  margin-top: 40px;
+}
+.footer-about {
+  margin-top: 50px;
+  padding: 20px;
+  text-align: center;
+}
+.footer-about a {
+  font-size: 30px;
+}
+.footer-about p {
+  margin-top: 10px;
+}
+.footer-about p:hover {
+  color: whitesmoke;
+}
+.footer-about a:hover {
+  color: whitesmoke;
+  transform: scale(1.3);
+}
+.parcerias-title {
+  font-size: 70px;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.parcerias-content {
+  display: grid;
+  grid-template-columns: repeat(4, 300px);
+  grid-gap: 30px;
+  margin-bottom: 60px;
+}
+.parcerias-content img {
+  max-width: 300px;
 }
 @-webkit-keyframes fadeIn {
   0% {
@@ -333,5 +388,17 @@ margin-bottom: 10px;
   }
   .container-mobile {
     display: grid;
+  }
+  .parcerias-content {
+    width: 60%;
+    display: grid;
+    grid-template-columns: repeat(1, 100%);
+    grid-gap: 10px;
+    margin-bottom: 60px;
+    justify-items: center;
+    justify-content: center;
+  }
+  .parcerias-content img {
+    max-width: 100%;
   }
 }
