--- a/css/mobile.css
+++ b/css/mobile.css
@@ -17,6 +17,7 @@
   text-align: center;
   color: white;
   margin-bottom: 50px;
+  text-transform: uppercase;
 }
 .nav-mobile {
   margin-top: -40px;
